--- a/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
+++ b/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
@@ -2,23 +2,60 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DylanDeSouzaCurrencyConverter.MainPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Grid" x:Key="FourColumnGridStyle">
+                <Setter Property="ColumnDefinitions">
+                    <Setter.Value>
+                        <ColumnDefinitionCollection>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </ColumnDefinitionCollection>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Text="AC" Grid.Column="0"/>
+            <Button Text="DEL" Grid.Column="1"/>
+            <Button Text="DIV" Grid.Column="2"/>
+        </Grid>
+        <Grid Grid.Row="2" Style="{StaticResource FourColumnGridStyle}">
+            <Button Text="7" Clicked="Button_Clicked" Grid.Column="0"/>
+            <Button Text="8" Clicked="Button_Clicked" Grid.Column="1"/>
+            <Button Text="9" Clicked="Button_Clicked" Grid.Column="2"/>
+            <Button Text="X" Clicked="Button_Clicked" Grid.Column="3"/>
+        </Grid>
+        <Grid Grid.Row="3" Style="{StaticResource FourColumnGridStyle}">
+            <Button Text="4" Clicked="Button_Clicked" Grid.Column="0"/>
+            <Button Text="5" Clicked="Button_Clicked" Grid.Column="1"/>
+            <Button Text="6" Clicked="Button_Clicked" Grid.Column="2"/>
+            <Button Text="-" Clicked="Button_Clicked" Grid.Column="3"/>
+        </Grid>
+        <Grid Grid.Row="4" Style="{StaticResource FourColumnGridStyle}">
+            <Button Text="1" Clicked="Button_Clicked" Grid.Column="0"/>
+            <Button Text="1" Clicked="Button_Clicked" Grid.Column="1"/>
+            <Button Text="3" Clicked="Button_Clicked" Grid.Column="2"/>
+            <Button Text="+" Clicked="Button_Clicked" Grid.Column="3"/>
+        </Grid>
+    </Grid>
 
 </ContentPage>
