--- a/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
+++ b/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
@@ -27,7 +27,20 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
+        <Grid Grid.Row="0">
+            <ListView x:Name="currenciesListView" ItemTapped="currenciesListView_ItemTapped">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <Label Text="Convertable Currencies"/>
+                                <Label Text="{Binding ConvertTo}" />
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -57,5 +70,4 @@
             <Button Text="+" Clicked="Button_Clicked" Grid.Column="3"/>
         </Grid>
     </Grid>
-
 </ContentPage>
