feat: implement currency conversion and rate retrieval functionality
- APIHandler.cs: Added 'GetRtaes' method to retrieve exchange rates from Open Exchange Rates API using 'HTTPClient'. Handled failures include success, rate limit exceeded, unsuccessful HTTP status codes, JSON deserialization, HTTP requests, request cancellation and nulll or missing data.
- Currency.cs: Enhanced to include properties for Australian Dollars, foreign currency amount, currency name, rate and USD to AUD rate. Methods added to handle conversions, reset values and find rates for selected currencies.
- MainPage.xaml: Updated bindings to include prefixes,  added stack layouts and controls for better UI interaction, changed control bindings and updated event handlers.
- Main PageViewModel.cs: Created ViewModel to manage currency conversions, UI operations and API interactions. Added methods to handle button clicks, reset values and load currencies from the API.
- DylanDeSouzaCurrencyConverter.csproj & DylanDeSouzaCurrencyConverter.UWP.csproj: Add 'Newtonsoft.Json' and 'System.Net.Http' package references for JSON handling and HTTP requests.
- CurrencyApiResponse: Created a class to match the API response data structure.

All changes aim to enhance currency conversion functionality and improve UI/UX with proper data handling and binding.

--- a/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
+++ b/DylanDeSouzaCurrencyConverter/DylanDeSouzaCurrencyConverter/MainPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="DylanDeSouzaCurrencyConverter.MainPage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -31,25 +31,27 @@
         </Grid.RowDefinitions>
         <StackLayout Orientation="Horizontal" Grid.Row="0">
             <Label Text="Amount Foreign Currency:"/>
-            <Label Text="{Binding AmountForeignCurrency}"/>
+            <Label Text="{Binding Currency.AmountForeignCurrency}"/>
         </StackLayout>
         <StackLayout Orientation="Horizontal"  Grid.Row="1">
             <Label Text="Amount Australian Dollars:"/>
-            <Label Text="{Binding AmountAustralianDollars}"/>
+            <Label Text="{Binding Currency.AmountAustralianDollars}"/>
         </StackLayout>
         <Grid Grid.Row="2">
-            <ListView x:Name="currenciesListView" ItemTapped="CurrenciesListView_ItemTapped">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout>
-                                <Label Text="Convertable Currencies"/>
-                                <Label Text="{Binding ConvertTo}" />
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <StackLayout>
+                <Label Text="Currencies"/>
+                <ListView x:Name="currenciesListView" ItemTapped="CurrencySelected"  ItemsSource="{Binding CollectionCurrencies}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout>
+                                    <Label Text="{Binding Name}" />
+                                </StackLayout>
+                            </ViewCell> 
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
         </Grid>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
